# inesc_robotis_arm

./: README.md  README.md~
devel/: .catkin  .rosinstall  setup.sh
devel/include/cat_move_to_target/: GetJointValues.h  GetJointValuesRequest.h  GetJointValuesResponse.h  GetTagPose.h  GetTagPoseRequest.h  GetTagPoseResponse.h
devel/include/robotis_controller_msgs/: ControlTorque.h  ControlWrite.h  PublishPosition.h
devel/lib/cat_manipulator_control/: kin_tests  my_init_robot  my_init_robot_gazebo  my_kinematics_node  my_kinematics_node_gazebo  robotis_kinematics_node  robotis_moveit_node
devel/lib/cat_manipulator_gui/: cat_manipulator_gui
devel/lib/cat_manipulator_h_planning/: move_manipulator
devel/lib/cat_manipulator_ik_gui/: cat_manipulator_ik_gui
devel/lib/cat_move_to_target/: cat_detect_tags  cat_ik_manipulator  cat_move_manipulator  gettagpose_service  gotoxyz_client  gotoxyz_service
devel/lib/pkgconfig/: cat_manipulator_control.pc  cat_manipulator_gui.pc  cat_manipulator_h_planning.pc  cat_manipulator_ik_gui.pc  cat_move_to_target.pc  robotis_controller.pc  robotis_controller_msgs.pc  robotis_manipulator_h_calc.pc  robotis_manipulator_h_description.pc  robotis_manipulator_h_gazebo.pc  robotis_manipulator_h_gui.pc  robotis_manipulator_h_moveit.pc
devel/lib/robotis_controller/: robotis_manager
devel/lib/robotis_manipulator_h_calc/: kinematics_node  moveit_node
devel/lib/robotis_manipulator_h_gui/: robotis_manipulator_h_gui
devel/share/cat_manipulator_control/cmake/: cat_manipulator_controlConfig.cmake
devel/share/cat_manipulator_gui/cmake/: cat_manipulator_guiConfig.cmake
devel/share/cat_manipulator_h_planning/cmake/: cat_manipulator_h_planningConfig.cmake
devel/share/cat_manipulator_ik_gui/cmake/: cat_manipulator_ik_guiConfig.cmake
src/INESC_Robotis_Driver/: CMakeLists.txt  README.md  READ_ME.txt  package.xml
src/INESC_Robotis_Driver/include/INESC_Robotis_Driver/: IK_Solver.hpp  TrajectoryGenerator.hpp
src/INESC_Robotis_Driver/launch/: robot_init.launch
src/INESC_Robotis_Driver/src/: GoToPose_service.cpp  IK_Solver.cpp  TrajectoryGenerator.cpp
src/INESC_Robotis_Driver/srv/: GetJointValues.srv  GetToolPose.srv  SetToolPose.srv  SetToolPosition.srv
src/ROBOTIS-Framework/robotis_controller/: CMakeLists.txt
src/ROBOTIS-Framework/robotis_controller/include/: RobotisController.h
src/ROBOTIS-Framework/robotis_controller/include/device/: DXLPRO.h  GenericDevice.h  MX28.h  UNKNOWN.h
src/ROBOTIS-Framework/robotis_controller/include/handler/: BulkReadData.h  GroupHandler.h  PacketHandler.h  PacketProtocol1.h  PacketProtocol2.h  PortHandler.h
src/ROBOTIS-Framework/robotis_controller/launch/: ROBOTIS-OP2.yaml  ROBOTIS-manipulatorH.yaml  ROBOTIS-manipulatorH.yaml~  robotis_another.launch  robotis_manager.launch
src/ROBOTIS-Framework/robotis_controller/src/: RobotisController.cpp  RobotisManager.cpp
src/ROBOTIS-Framework/robotis_controller/src/device/: GenericDevice.cpp
src/ROBOTIS-Framework/robotis_controller/src/handler/: GroupHandler.cpp  PacketHandler.cpp  PacketProtocol1.cpp  PacketProtocol2.cpp  PortHandler.cpp
src/ROBOTIS-Framework/robotis_controller_msgs/: CMakeLists.txt
src/ROBOTIS-MANIPULATOR/: README.md
src/ROBOTIS-MANIPULATOR/build-cat_manipulator_gui-Desktop-Default/: CMakeCache.txt
src/ROBOTIS-MANIPULATOR/build-robotis_manipulator_h_calc-Desktop-Default/: CMakeCache.txt
src/ROBOTIS-MANIPULATOR/cat_manipulator_gui/: CMakeLists.txt  package.xml
src/ROBOTIS-MANIPULATOR/cat_manipulator_gui/src/: main.cpp  (+2 more)
src/ROBOTIS-MANIPULATOR/cat_manipulator_ik_gui/: CMakeLists.txt  package.xml
src/ROBOTIS-MANIPULATOR/cat_manipulator_ik_gui/include/cat_manipulator_ik_gui/: main_window.hpp  qnode.hpp
src/ROBOTIS-MANIPULATOR/cat_manipulator_ik_gui/src/: main.cpp  main_window.cpp  qnode.cpp
src/ROBOTIS-MANIPULATOR/cat_manipulator_ik_gui/ui/: main_window.ui
src/ROBOTIS-MANIPULATOR/robotis_manipulator_h_calc/: CMakeLists.txt
src/ROBOTIS-MANIPULATOR/robotis_manipulator_h_description/: CMakeLists.txt
src/ROBOTIS-MANIPULATOR/robotis_manipulator_h_gazebo/: .sdf  CMakeLists.txt  package.xml
src/ROBOTIS-MANIPULATOR/robotis_manipulator_h_gui/: CMakeLists.txt  mainpage.dox  package.xml
src/ROBOTIS-MANIPULATOR/robotis_manipulator_h_moveit/: .setup_assistant  CMakeLists.txt
src/cat_manipulator_control/: CMakeLists.txt  package.xml  package.xml~
src/cat_manipulator_control/include/: jointstate.h  state.h~  trajectory.h
src/cat_manipulator_control/launch/: gazebo_robot_init.launch  gazebo_robot_init.launch~
src/cat_manipulator_control/src/: kin_tests.cpp  main_kinematics.cpp  main_moveit.cpp~  my_init_robot.cpp  my_init_robot_gazebo.cpp  my_main_kinematics.cpp  my_main_kinematics_gazebo.cpp
src/cat_move_to_target/: CMakeLists.txt  CMakeLists.txt~  READ_ME.txt~  package.xml~
src/cat_move_to_target/include/cat_move_to_target/: ApriltagsClass.hpp  RobotState.hpp  SimpleTag.hpp  TwoDotFiveDVS.hpp  pick.hpp  robot_state.h~
src/cat_move_to_target/launch/: backFunction_moveToTarget_new.launch~  backFunction_move_to_target.launch  backFunction_move_to_target.launch~  calibration.launch~  camera_launch.launch~  camera_tags.launch  camera_tags.launch~  kinematics_tutorial.launch~  move_group_launch.launch~  move_manip.launch  move_manip.launch~  move_to_target.launch  move_to_target.launch~  robot_init.launch  robot_init_backup.txt  robot_tf_publishing.launch  run_calibration.launch~  tags_tf_publishing.launch~  view_.launch~
src/cat_move_to_target/src/: ApriltagsClass.cpp  RobotState.cpp  SimpleTag.cpp  TwoDotFiveDVS.cpp  backup_move_to_target.txt  calibration.cpp~  detect_tags.cpp  getJoints_service.cpp~  gettagpose_service.cpp  gotoxyz_client.cpp  gotoxyz_service.cpp  ik_manipulator.cpp  move_to_target.cpp  pick.cpp
src/cat_move_to_target/srv/: GetJointState.srv~  GetJointValues.srv  GetTagPose.srv  GetTagPose.srv~
src/inesc_3_finger_gripper_driver/: CMakeLists.txt  README.md  package.xml
src/inesc_3_finger_gripper_driver/src/: Gripper_driver.cpp
src/inesc_3_finger_gripper_driver/srv/: Close.srv  Open.srv
(+99 files in other folders)
